--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.3.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
